qt6/gen_qsignalmapper.h

class QMetaObject;
class QObject;
class QSignalMapper;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSignalMapper QSignalMapper;
typedef struct QTimerEvent QTimerEvent;
QSignalMapper* QSignalMapper_new();
QSignalMapper* QSignalMapper_new2(QObject* parent);
QMetaObject* QSignalMapper_metaObject(const QSignalMapper* self);
void* QSignalMapper_metacast(QSignalMapper* self, const char* param1);
int QSignalMapper_metacall(QSignalMapper* self, int param1, int param2, void** param3);
struct miqt_string QSignalMapper_tr(const char* s);
void QSignalMapper_setMapping(QSignalMapper* self, QObject* sender, int id);
void QSignalMapper_setMapping2(QSignalMapper* self, QObject* sender, struct miqt_string text);
void QSignalMapper_setMapping3(QSignalMapper* self, QObject* sender, QObject* object);
void QSignalMapper_removeMappings(QSignalMapper* self, QObject* sender);
QObject* QSignalMapper_mapping(const QSignalMapper* self, int id);
QObject* QSignalMapper_mappingWithText(const QSignalMapper* self, struct miqt_string text);
QObject* QSignalMapper_mappingWithObject(const QSignalMapper* self, QObject* object);
void QSignalMapper_mappedInt(QSignalMapper* self, int param1);
void QSignalMapper_connect_mappedInt(QSignalMapper* self, intptr_t slot);
void QSignalMapper_mappedString(QSignalMapper* self, struct miqt_string param1);
void QSignalMapper_connect_mappedString(QSignalMapper* self, intptr_t slot);
void QSignalMapper_mappedObject(QSignalMapper* self, QObject* param1);
void QSignalMapper_connect_mappedObject(QSignalMapper* self, intptr_t slot);
void QSignalMapper_map(QSignalMapper* self);
void QSignalMapper_mapWithSender(QSignalMapper* self, QObject* sender);
struct miqt_string QSignalMapper_tr2(const char* s, const char* c);
struct miqt_string QSignalMapper_tr3(const char* s, const char* c, int n);
bool QSignalMapper_override_virtual_metacall(void* self, intptr_t slot);
int QSignalMapper_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSignalMapper_override_virtual_event(void* self, intptr_t slot);
bool QSignalMapper_virtualbase_event(void* self, QEvent* event);
bool QSignalMapper_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSignalMapper_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSignalMapper_override_virtual_timerEvent(void* self, intptr_t slot);
void QSignalMapper_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSignalMapper_override_virtual_childEvent(void* self, intptr_t slot);
void QSignalMapper_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSignalMapper_override_virtual_customEvent(void* self, intptr_t slot);
void QSignalMapper_virtualbase_customEvent(void* self, QEvent* event);
bool QSignalMapper_override_virtual_connectNotify(void* self, intptr_t slot);
void QSignalMapper_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSignalMapper_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSignalMapper_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QSignalMapper_delete(QSignalMapper* self);